relay-pii/src/snapshots/relay_pii__convert__tests__sanitize_url_6.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "foo": "postgres:///path"
  }
}
