relay-pii/src/snapshots/relay_pii__convert__tests__sdk_client_ip_stripped.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "sdk": {
    "client_ip": "[ip]"
  },
  "_meta": {
    "sdk": {
      "client_ip": {
        "": {
          "rem": [
            [
              "@ip:replace",
              "s",
              0,
              4
            ]
          ],
          "len": 9
        }
      }
    }
  }
}
