relay-pii/src/snapshots/relay_pii__convert__tests__sensitive_cookies.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "request": {
    "cookies": [
      [
        "__session",
        "[Filtered]"
      ],
      [
        "_csrf",
        "[Filtered]"
      ],
      [
        "_iris_csrf",
        "[Filtered]"
      ],
      [
        "_vercel_jwt",
        "[Filtered]"
      ],
      [
        "_xsrf",
        "[Filtered]"
      ],
      [
        "csrf",
        "[Filtered]"
      ],
      [
        "csrf-token",
        "[Filtered]"
      ],
      [
        "csrf_token",
        "[Filtered]"
      ],
      [
        "fastcsrf",
        "[Filtered]"
      ],
      [
        "fasthttpsessionid",
        "[Filtered]"
      ],
      [
        "irissessionid",
        "[Filtered]"
      ],
      [
        "mysession",
        "[Filtered]"
      ],
      [
        "not_sensitive",
        "keep this"
      ],
      [
        "phpsessid",
        "[Filtered]"
      ],
      [
        "sentrysid",
        "[Filtered]"
      ],
      [
        "session",
        "[Filtered]"
      ],
      [
        "sessionid",
        "[Filtered]"
      ],
      [
        "su",
        "[Filtered]"
      ],
      [
        "sudo",
        "[Filtered]"
      ],
      [
        "symfony",
        "[Filtered]"
      ],
      [
        "user_session",
        "[Filtered]"
      ],
      [
        "xsrf",
        "[Filtered]"
      ],
      [
        "xsrf-token",
        "[Filtered]"
      ],
      [
        "xsrf_token",
        "[Filtered]"
      ]
    ]
  },
  "contexts": {
    "response": {
      "cookies": [
        [
          "__session",
          "[Filtered]"
        ],
        [
          "_csrf",
          "[Filtered]"
        ],
        [
          "_iris_csrf",
          "[Filtered]"
        ],
        [
          "_vercel_jwt",
          "[Filtered]"
        ],
        [
          "_xsrf",
          "[Filtered]"
        ],
        [
          "csrf",
          "[Filtered]"
        ],
        [
          "csrf-token",
          "[Filtered]"
        ],
        [
          "csrf_token",
          "[Filtered]"
        ],
        [
          "fastcsrf",
          "[Filtered]"
        ],
        [
          "fasthttpsessionid",
          "[Filtered]"
        ],
        [
          "irissessionid",
          "[Filtered]"
        ],
        [
          "mysession",
          "[Filtered]"
        ],
        [
          "not_sensitive",
          "keep this"
        ],
        [
          "phpsessid",
          "[Filtered]"
        ],
        [
          "sentrysid",
          "[Filtered]"
        ],
        [
          "session",
          "[Filtered]"
        ],
        [
          "sessionid",
          "[Filtered]"
        ],
        [
          "su",
          "[Filtered]"
        ],
        [
          "sudo",
          "[Filtered]"
        ],
        [
          "symfony",
          "[Filtered]"
        ],
        [
          "user_session",
          "[Filtered]"
        ],
        [
          "xsrf",
          "[Filtered]"
        ],
        [
          "xsrf-token",
          "[Filtered]"
        ],
        [
          "xsrf_token",
          "[Filtered]"
        ]
      ],
      "type": "response"
    }
  },
  "_meta": {
    "contexts": {
      "response": {
        "cookies": {
          "0": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "1": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 8
              }
            }
          },
          "10": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 16
              }
            }
          },
          "11": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "13": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "14": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "15": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            }
          },
          "16": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 12
              }
            }
          },
          "17": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            }
          },
          "18": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 7
              }
            }
          },
          "19": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            }
          },
          "2": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 13
              }
            }
          },
          "20": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 15
              }
            }
          },
          "21": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 7
              }
            }
          },
          "22": {
            "1": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 14
              }
            }
          },
          "23": {
            "1": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 14
              }
            }
          },
          "3": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 14
              }
            }
          },
          "4": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 8
              }
            }
          },
          "5": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 7
              }
            }
          },
          "6": {
            "1": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 13
              }
            }
          },
          "7": {
            "1": {
              "": {
                "rem": [
                  [
                    "@password:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 13
              }
            }
          },
          "8": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 11
              }
            }
          },
          "9": {
            "1": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 20
              }
            }
          }
        }
      }
    },
    "request": {
      "cookies": {
        "0": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 8
            }
          }
        },
        "10": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 16
            }
          }
        },
        "11": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "13": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "14": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "15": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "16": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 12
            }
          }
        },
        "17": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "18": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 7
            }
          }
        },
        "19": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "2": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 13
            }
          }
        },
        "20": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 15
            }
          }
        },
        "21": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 7
            }
          }
        },
        "22": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 14
            }
          }
        },
        "23": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 14
            }
          }
        },
        "3": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 14
            }
          }
        },
        "4": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 8
            }
          }
        },
        "5": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 7
            }
          }
        },
        "6": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 13
            }
          }
        },
        "7": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 13
            }
          }
        },
        "8": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 11
            }
          }
        },
        "9": {
          "1": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 20
            }
          }
        }
      }
    }
  }
}
