relay-pii/src/snapshots/relay_pii__convert__tests__span_cookie.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "contexts": {
    "trace": {
      "data": {
        "http.request.header.cookie": "baz=quux; session__0=[Filtered]; language=en; csrf=[Filtered]; foo=bar",
        "http.request.header.cookie.__session": "[Filtered]",
        "http.request.header.cookie._csrf": "[Filtered]",
        "http.request.header.cookie._iris_csrf": "[Filtered]",
        "http.request.header.cookie._xsrf": "[Filtered]",
        "http.request.header.cookie.csrf": "[Filtered]",
        "http.request.header.cookie.csrf-token": "[Filtered]",
        "http.request.header.cookie.csrf_token": "[Filtered]",
        "http.request.header.cookie.dark-mode": "foobar",
        "http.request.header.cookie.fastcsrf": "[Filtered]",
        "http.request.header.cookie.fasthttpsessionid": "[Filtered]",
        "http.request.header.cookie.irissessionid": "[Filtered]",
        "http.request.header.cookie.mysession": "[Filtered]",
        "http.request.header.cookie.phpsessid": "[Filtered]",
        "http.request.header.cookie.sentrysid": "[Filtered]",
        "http.request.header.cookie.session": "[Filtered]",
        "http.request.header.cookie.sessionid": "[Filtered]",
        "http.request.header.cookie.su": "[Filtered]",
        "http.request.header.cookie.sudo": "[Filtered]",
        "http.request.header.cookie.symfony": "[Filtered]",
        "http.request.header.cookie.user_session": "[Filtered]",
        "http.request.header.cookie.xsrf": "[Filtered]",
        "http.request.header.cookie.xsrf-token": "[Filtered]",
        "http.request.header.cookie.xsrf_token": "[Filtered]"
      },
      "type": "trace"
    }
  },
  "spans": [
    {
      "data": {
        "http.request.header.cookie": [
          "baz=quux",
          "session__0=[Filtered]",
          "language=en",
          "csrf=[Filtered]",
          "foo=bar"
        ],
        "http.request.header.cookie.__session": "[Filtered]",
        "http.request.header.cookie._csrf": "[Filtered]",
        "http.request.header.cookie._iris_csrf": "[Filtered]",
        "http.request.header.cookie._xsrf": "[Filtered]",
        "http.request.header.cookie.csrf": "[Filtered]",
        "http.request.header.cookie.csrf-token": "[Filtered]",
        "http.request.header.cookie.csrf_token": "[Filtered]",
        "http.request.header.cookie.dark-mode": "foobar",
        "http.request.header.cookie.fastcsrf": "[Filtered]",
        "http.request.header.cookie.fasthttpsessionid": "[Filtered]",
        "http.request.header.cookie.irissessionid": "[Filtered]",
        "http.request.header.cookie.mysession": "[Filtered]",
        "http.request.header.cookie.phpsessid": "[Filtered]",
        "http.request.header.cookie.sentrysid": "[Filtered]",
        "http.request.header.cookie.session": "[Filtered]",
        "http.request.header.cookie.sessionid": "[Filtered]",
        "http.request.header.cookie.su": "[Filtered]",
        "http.request.header.cookie.sudo": "[Filtered]",
        "http.request.header.cookie.symfony": "[Filtered]",
        "http.request.header.cookie.user_session": "[Filtered]",
        "http.request.header.cookie.xsrf": "[Filtered]",
        "http.request.header.cookie.xsrf-token": "[Filtered]",
        "http.request.header.cookie.xsrf_token": "[Filtered]"
      }
    }
  ],
  "_meta": {
    "contexts": {
      "trace": {
        "data": {
          "http.request.header.cookie": {
            "": {
              "rem": [
                [
                  "@cookies:filter",
                  "s",
                  21,
                  31
                ],
                [
                  "@cookies:filter",
                  "s",
                  51,
                  61
                ]
              ],
              "len": 70
            }
          },
          "http.request.header.cookie.__session": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie._csrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie._iris_csrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie._xsrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.csrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.csrf-token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.csrf_token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.fastcsrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.fasthttpsessionid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.irissessionid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.mysession": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.phpsessid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.sentrysid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.session": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.sessionid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.su": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.sudo": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.symfony": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.user_session": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.xsrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.xsrf-token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.xsrf_token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          }
        }
      }
    },
    "spans": {
      "0": {
        "data": {
          "http.request.header.cookie": {
            "1": {
              "": {
                "rem": [
                  [
                    "@cookies:filter",
                    "s",
                    11,
                    21
                  ]
                ],
                "len": 17
              }
            },
            "3": {
              "": {
                "rem": [
                  [
                    "@cookies:filter",
                    "s",
                    5,
                    15
                  ]
                ],
                "len": 19
              }
            }
          },
          "http.request.header.cookie.__session": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie._csrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie._iris_csrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie._xsrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.csrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.csrf-token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.csrf_token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.fastcsrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.fasthttpsessionid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.irissessionid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.mysession": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.phpsessid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.sentrysid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.session": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.sessionid": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.su": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.sudo": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.symfony": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.user_session": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.xsrf": {
            "": {
              "rem": [
                [
                  "@anything:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.xsrf-token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          },
          "http.request.header.cookie.xsrf_token": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 6
            }
          }
        }
      }
    }
  }
}
